--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food website</title>
-    <link rel="stylesheet" href="./style.css">
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +14,44 @@
         rel="stylesheet">
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Foods</a>
+        <div class="bx-menu" id="menu-icon"></div>
+
+        <ul class="navbar">
+            <li><a href="#home"></a>Home</li>
+            <li><a href="#about"></a>About</li>
+            <li><a href="#menu"></a>Menu</li>
+            <li><a href="#services"></a>Services</li>
+            <li><a href="#contact"></a>Contact</li>
+        </ul>
+    </header>
+    <!-- --------------------------home start -->
+    <section class="home" id="home">
+        <div class="home-text">
+            <h1>full website</h1>
+            <h2>food the <br> most precious thing</h2>
+            <a href="#" class="btn">todays menu</a>
+        </div>
+
+        <div class="home-img">
+            <img src="img/home.png" alt="">
+
+        </div>
+    </section>
+<!-- -------------------------------about start -->
+<section class="about" id="about">
+    <div class="about-img">
+        <img src="img/about.png" alt="">
+    </div>
+
+    <div class="about-text">
+        <span>About Us</span>
+        <h2>We speak the good <br>food language</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, perspiciatis optio eligendi ipsa neque error molestias voluptate, voluptatem maiores ab quia doloribus accusantium temporibus nostrum deserunt aperiam magni perferendis iste?</p>
+        <a href="#" class="btn">todays menu</a>
+    </div>
+</section>
     
 </body>
 </html>
