--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>food website</title>
+    <title>Food Website</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -29,8 +29,8 @@
     <!-- --------------------------home start -->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>full website</h1>
-            <h2>food the <br> most precious thing</h2>
+            <h1>foodStore</h1>
+            <h2>Food The <br> Most Precious Thing</h2>
             <a href="#" class="btn">todays menu</a>
         </div>
 
@@ -49,9 +49,139 @@
         <span>About Us</span>
         <h2>We speak the good <br>food language</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, perspiciatis optio eligendi ipsa neque error molestias voluptate, voluptatem maiores ab quia doloribus accusantium temporibus nostrum deserunt aperiam magni perferendis iste?</p>
-        <a href="#" class="btn">todays menu</a>
+        <a href="#" class="btn">Learn more</a>
     </div>
 </section>
     
+<!---------------------------------menu start -->
+<section class="menu" id="menu">
+    <div class="heading">
+        <span>Food Menu</span>
+        <h2>fresh taste and great price</h2>
+    </div>
+
+    <div class="menu-container">
+
+        <div class="box">
+            <div class="box-img">
+                <img src="img/food1.png" alt="">
+            </div>
+            <h2>Chicken burger</h2>
+            <h3>Tasty Foods</h3>
+            <span>$11.00</span>
+            <i class='bx bx-cart-alt'></i>
+        </div>
+
+        <div class="box">
+            <div class="box-img">
+                <img src="img/food2.png" alt="">
+            </div>
+            <h2>Special beef burger</h2>
+            <h3>Tasty Foods</h3>
+            <span>$11.00</span>
+            <i class='bx bx-cart-alt'></i>
+        </div>
+
+        <div class="box">
+            <div class="box-img">
+                <img src="img/food3.png" alt="">
+            </div>
+            <h2>Chicken Fry pack</h2>
+            <h3>Tasty Foods</h3>
+            <span>$11.00</span>
+            <i class='bx bx-cart-alt'></i>
+        </div>
+    </div>
+</section>
+
+<!-- ---------------------------service start -->
+<section class="services" id="services">
+    <div class="heading">
+        <span>Services</span>
+        <h2>We provide best quality food</h2>
+    </div>
+
+    <div class="service-container">
+        <div class="s-box">
+            <img src="img/s1.png" alt="">
+            <h3>Order</h3>
+            <p> there are many variations of ---Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, eum eligendi temporibus fuga aliquid alias molestias incidunt tenetur soluta, obcaecati voluptas, qui non consectetur tempore odio. Possimus, maxime! Voluptates, itaque!</p>
+        </div>
+
+        <div class="s-box">
+            <img src="img/s2.png" alt="">
+            <h3>Shipping</h3>
+            <p> there are many variations of ---Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, eum eligendi temporibus fuga aliquid alias molestias incidunt tenetur soluta, obcaecati voluptas, qui non consectetur temporeodio. Possimus, maxime! Voluptates, itaque!</p>
+        </div>
+
+        <div class="s-box">
+            <img src="img/s3.png" alt="">
+            <h3>Delivery</h3>
+            <p> there are many variations of ---Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, eum eligenditemporibus fuga aliquid alias molestias incidunt tenetur soluta, obcaecati voluptas, qui non consectetur temporeodio. Possimus, maxime! Voluptates, itaque!</p>
+        </div>
+    </div>
+</section>
+
+<!-----------------------------call to action -->
+    <section class="sec">
+        <h2>We make quality food <br>Everyday</h2>
+        <a href="#" class="btn">let's talk</a>
+    </section>
+
+<!-- --------------------------footer start -->
+<section id="contact">
+    <div class="footer">
+        <div class="main">
+
+            <div class="col">
+                <h4>Menu Links</h4>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Menu</a></li>
+                    <li><a href="">Service</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="col">
+                <h4>Our Service</h4>
+                <ul>
+                    <li><a href="">web design</a></li>
+                    <li><a href="">web development</a></li>
+                    <li><a href="">Marketing</a></li>
+                    <li><a href="">Product management</a></li>
+                    <li><a href="">Real estate</a></li>
+                </ul>
+            </div>
+
+            <div class="col">
+                <h4>Information</h4>
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Delivery Information</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Terms & Conditions</a></li>
+                </ul>
+            </div>
+
+            <div class="col">
+                <h4>Contact Us</h4>
+                <div class="social">
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+
+
+
 </body>
 </html>
