created the js file

--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
         rel="stylesheet">
 </head>
 <body>
+
     <header>
         <a href="#" class="logo">Foods</a>
-        <div class="bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"></div>
 
         <ul class="navbar">
-            <li><a href="#home"></a>Home</li>
-            <li><a href="#about"></a>About</li>
-            <li><a href="#menu"></a>Menu</li>
-            <li><a href="#services"></a>Services</li>
-            <li><a href="#contact"></a>Contact</li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#services">Service</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </header>
+
+
     <!-- --------------------------home start -->
     <section class="home" id="home">
         <div class="home-text">
@@ -66,6 +69,7 @@
             <div class="box-img">
                 <img src="img/food1.png" alt="">
             </div>
+
             <h2>Chicken burger</h2>
             <h3>Tasty Foods</h3>
             <span>$11.00</span>
@@ -76,6 +80,7 @@
             <div class="box-img">
                 <img src="img/food2.png" alt="">
             </div>
+
             <h2>Special beef burger</h2>
             <h3>Tasty Foods</h3>
             <span>$11.00</span>
@@ -86,6 +91,7 @@
             <div class="box-img">
                 <img src="img/food3.png" alt="">
             </div>
+
             <h2>Chicken Fry pack</h2>
             <h3>Tasty Foods</h3>
             <span>$11.00</span>
@@ -93,6 +99,8 @@
         </div>
     </div>
 </section>
+
+
 
 <!-- ---------------------------service start -->
 <section class="services" id="services">
@@ -122,11 +130,15 @@
     </div>
 </section>
 
+
+
 <!-----------------------------call to action -->
     <section class="sec">
         <h2>We make quality food <br>Everyday</h2>
         <a href="#" class="btn">let's talk</a>
     </section>
+
+
 
 <!-- --------------------------footer start -->
 <section id="contact">
@@ -168,10 +180,10 @@
             <div class="col">
                 <h4>Contact Us</h4>
                 <div class="social">
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                    <a href="#">       </a>
+                    <a href="#">       </a>
+                    <a href="#">       </a>
+                    <a href="#">       </a>
                 </div>
             </div>
 
@@ -180,8 +192,7 @@
 </section>
 
 
-
-
-
+<!-- ----javascript -->
+<script  type= "text/javascript" src="./script.js"></script>
 </body>
 </html>
