--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
     <div class="about-text">
         <span>About Us</span>
-        <h2>We speak the good <br>food language</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, perspiciatis optio eligendi ipsa neque error molestias voluptate, voluptatem maiores ab quia doloribus accusantium temporibus nostrum deserunt aperiam magni perferendis iste?</p>
+        <h2>Our food is always<br>Craveable</h2>
+        <p>Our foodstore specialize in all kinds burger, fried chicken, rotisserie chicken, chicken wraps and sandwiches. Our store is one of the fastest growing store due to our tasty range of food and our affordable prices we offer to nigerians. </p>
         <a href="#" class="btn">Learn more</a>
     </div>
 </section>
@@ -113,19 +113,19 @@
         <div class="s-box">
             <img src="img/s1.png" alt="">
             <h3>Order</h3>
-            <p> there are many variations of ---Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, eum eligendi temporibus fuga aliquid alias molestias incidunt tenetur soluta, obcaecati voluptas, qui non consectetur tempore odio. Possimus, maxime! Voluptates, itaque!</p>
+            <p> With our varieties of fast-food that we offer, we can place your order for any kind of food you want and our customer service will reach out to you and get our order placed. We ensure your order gets to you immediately.</p>
         </div>
 
         <div class="s-box">
             <img src="img/s2.png" alt="">
             <h3>Shipping</h3>
-            <p> there are many variations of ---Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, eum eligendi temporibus fuga aliquid alias molestias incidunt tenetur soluta, obcaecati voluptas, qui non consectetur temporeodio. Possimus, maxime! Voluptates, itaque!</p>
+            <p> We also offer shipping services for orders that are few kilometers away. With are numerious stores nationwide, we ensure prompt delivery and shipping to any location.</p>
         </div>
 
         <div class="s-box">
             <img src="img/s3.png" alt="">
             <h3>Delivery</h3>
-            <p> there are many variations of ---Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo, eum eligenditemporibus fuga aliquid alias molestias incidunt tenetur soluta, obcaecati voluptas, qui non consectetur temporeodio. Possimus, maxime! Voluptates, itaque!</p>
+            <p> Our numerious riders and delivery vans, we delivery service is top-notch in the nation. Our numerious customer service work hand-in-hand with the riders to ensure effective and efficient delivery and customer feedback is important to us. </p>
         </div>
     </div>
 </section>
@@ -159,11 +159,11 @@
             <div class="col">
                 <h4>Our Service</h4>
                 <ul>
-                    <li><a href="">web design</a></li>
-                    <li><a href="">web development</a></li>
-                    <li><a href="">Marketing</a></li>
-                    <li><a href="">Product management</a></li>
-                    <li><a href="">Real estate</a></li>
+                    <li><a href="">Delivery</a></li>
+                    <li><a href="">Discounts</a></li>
+                    <li><a href="">Sales promotion</a></li>
+                    <li><a href="">Order online</a></li>
+                    <li><a href="">exclusive offers</a></li>
                 </ul>
             </div>
 
@@ -180,10 +180,10 @@
             <div class="col">
                 <h4>Contact Us</h4>
                 <div class="social">
-                    <a href="#">       </a>
-                    <a href="#">       </a>
-                    <a href="#">       </a>
-                    <a href="#">       </a>
+                    <a href="#"> <i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"> <i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"> <i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"> <i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
 
