--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
             <div class="col">
                 <h4>Contact Us</h4>
                 <div class="social">
-                    <a href="#"> <i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"> <i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"> <i class="fa-brands fa-youtube"></i></a>
-                    <a href="#"> <i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="bx bxl-facebook"></i></a>
+                    <a href="#"><i class="bx bxl-twitter"></i></a>
+                    <a href="#"><i class="bx bxl-instagram"></i></a>
+                    <a href="#"><i class="bx bxl-youtube"></i></a>
                 </div>
             </div>
 
